Modified navbar-brand class's margin. it was causing some issues on smaller screens.

--- a/style.css
+++ b/style.css
@@ -53,7 +53,6 @@ label {
 	padding: 25px;
 	font-size: 35px !important;
 	font-weight: bold;
-	margin-left: 23px;
 }
 
   .btn {
